// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Command: move > move dir and sub-dir 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Validating source path
[SUCCESS] Validating source path
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] /src/index.js -> /src/index.ts
[DATA] /src/foo/baz.js -> /src/foo/baz.ts
[DATA] /src/foo/biz.js -> /src/foo/biz.ts
[DATA] /src/foo/e.gjs -> /src/foo/e.gts
[DATA] /src/foo/buz/biz.js -> /src/foo/buz/biz.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move file 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Validating source path
[SUCCESS] Validating source path
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] /src/foo/baz.js -> /src/foo/baz.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move packages with --graph and --deps flag 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Validating source path
[SUCCESS] Validating source path
[STARTED] Analyzing project dependency graph
[DATA] Graph order for .:
[DATA] index.js
[DATA] module-a/index.js
[DATA] module-a/src/baz.js
[DATA] module-a/src/foo.js
[DATA] module-b/index.js
[DATA] module-b/src/tires.js
[DATA] module-b/src/car.js
[DATA] src/bizz.ts
[DATA] src/foo/baz.js
[DATA] src/foo/biz.js
[DATA] src/foo/buz/biz.js
[DATA] src/index.js
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] /index.js -> /index.ts
[DATA] /module-a/index.js -> /module-a/index.ts
[DATA] /module-a/src/baz.js -> /module-a/src/baz.ts
[DATA] /module-a/src/foo.js -> /module-a/src/foo.ts
[DATA] /module-b/index.js -> /module-b/index.ts
[DATA] /module-b/src/tires.js -> /module-b/src/tires.ts
[DATA] /module-b/src/car.js -> /module-b/src/car.ts
[DATA] /src/foo/baz.js -> /src/foo/baz.ts
[DATA] /src/foo/biz.js -> /src/foo/biz.ts
[DATA] /src/foo/buz/biz.js -> /src/foo/buz/biz.ts
[DATA] /src/index.js -> /src/index.ts
[SUCCESS] Executing git mv"
`;
